# sindeo_rag

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci-pipeline.yml
