[project]
name = "sindeo-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=0.6.3",
    "faiss-cpu>=1.10.0",
    "fastapi>=0.115.8",
    "langchain>=0.3.18",
    "openai>=1.63.0",
    "pre-commit>=4.1.0",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.0",
]
